--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Real time Object Detection using CocoSsd</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="http://localhost:8080/ml5.js" type="text/javascript"></script>
-  
+  <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
 </head>
 <body>
   <h1>Real time Object Detection using CocoSsd</h1>
